Add query of database in special java package