@@ -2,6 +2,8 @@ package com.aurea.und;
 
 import java.io.File;
 import java.io.IOException;
+import java.util.Arrays;
+import java.util.List;
 
 import org.apache.log4j.Logger;
 import org.springframework.beans.factory.annotation.Value;
@@ -16,9 +18,12 @@ public class CreateCommand {
     private String undCommand;
 
     public Process createUdb(File executionFolder, String projectAnalysisFolder, String dbFileName) throws IOException {
-        String command = undCommand + " create -db " + dbFileName + " -languages java add " + projectAnalysisFolder;
+        List<String> command = Arrays.asList(undCommand, "create", "-db", dbFileName, "-languages", "java", "add",
+                projectAnalysisFolder);
         LOGGER.info("Running process: " + command);
-        return Runtime.getRuntime().exec(command, new String[] {}, executionFolder);
+        ProcessBuilder pb = new ProcessBuilder(command).redirectOutput(ProcessBuilder.Redirect.INHERIT)
+                .redirectError(ProcessBuilder.Redirect.INHERIT).directory(executionFolder);
+        return pb.start();
     }
 
 }
